--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -19,7 +19,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("/images/mobile/Header480.jpg");
+      url("../images/mobile/Header480.jpg");
     // background-size: 480px 400px;
     background-size: cover;
 
@@ -33,7 +33,7 @@
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)
           ),
-          url("/images/mobile/Header960@2x.jpg");
+          url("../images/mobile/Header960@2x.jpg");
       }
     }
   }
@@ -43,7 +43,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("/images/tablet/Header768.jpg");
+      url("../images/tablet/Header768.jpg");
     // background-size: 480px 400px;
     background-size: cover;
 
@@ -57,7 +57,7 @@
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)
           ),
-          url("/images/tablet/Header1536@2x.jpg");
+          url("../images/tablet/Header1536@2x.jpg");
       }
     }
   }
@@ -67,7 +67,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("/images/desktop/Header1600.jpg");
+      url("../images/desktop/Header1600.jpg");
     // background-size: 480px 400px;
     background-size: cover;
 
@@ -81,7 +81,7 @@
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)
           ),
-          url("/images/desktop/Header3200@2x.jpg");
+          url("../images/desktop/Header3200@2x.jpg");
       }
     }
   }
