--- a/css/main.css
+++ b/css/main.css
@@ -1519,6 +1519,24 @@ li {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media screen and (max-width: 370px) {
+  .img-text {
+    padding: 44px 24px 0 24px;
+    max-height: 220px;
+    font-size: 16px;
+    line-height: 1.2;
+  }
+}
+
+@media screen and (max-width: 300px) {
+  .img-text {
+    padding: 54px 24px 0 24px;
+    max-height: 200px;
+    font-size: 14px;
+    line-height: 1.2;
+  }
+}
+
 /* client css */
 .clients-section {
   padding-top: 60px;
@@ -1744,12 +1762,37 @@ li {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  width: 528px;
-  height: 581px;
+  width: 100%;
+  height: 609px;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: transform 550ms cubic-bezier(0.4, 0, 0.2, 1) 100ms;
+}
+
+@media screen and (max-width: 341px) {
+  .modal {
+    height: 630px;
+  }
+}
+
+@media screen and (max-width: 449px) {
+  .modal {
+    max-width: 450px;
+  }
+}
+
+@media screen and (min-width: 450px) {
+  .modal {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
 }
 
 .is-hidden .modal {
@@ -1803,15 +1846,22 @@ li {
 .backdrop-text {
   margin: 0;
   padding-top: 40px;
-  padding-left: 41px;
+  padding-left: 40px;
+  padding-right: 40px;
   padding-bottom: 2px;
+  text-align: center;
   font-family: Roboto;
   font-weight: 700;
   font-size: 20px;
-  line-height: 1.15;
-  text-align: left;
+  line-height: 1.5;
   letter-spacing: 0.03em;
   color: #212121;
+}
+
+@media screen and (min-width: 1200px) {
+  .backdrop-text {
+    line-height: 1.15;
+  }
 }
 
 .form {
@@ -1860,31 +1910,59 @@ li {
 .form__contract {
   font-family: Roboto;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.72;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: #2196f3;
 }
 
+@media screen and (min-width: 1200px) {
+  .form__contract {
+    font-size: 14px;
+    line-height: 1.71;
+  }
+}
+
 .form__checkbox {
-  display: flex;
+  display: inline-flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
   margin: 0;
   padding-top: 20px;
   padding-bottom: 30px;
 }
 
+@media screen and (max-width: 341px) {
+  .form__checkbox {
+    padding-bottom: 20px;
+  }
+}
+
 .form__checkbox-label {
+  display: inline-flex;
   align-items: center;
   justify-content: center;
   margin-right: 7px;
   font-family: Roboto;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: #757575;
+}
+
+@media screen and (max-width: 341px) {
+  .form__checkbox-label {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .form__checkbox-label {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .form__checkbox-icon {
@@ -1894,6 +1972,12 @@ li {
   height: 15px;
   border: 1px solid #212121;
   border-radius: 2px;
+}
+
+@media screen and (max-width: 341px) {
+  .form__checkbox-icon {
+    margin-right: 3px;
+  }
 }
 
 .form__button {
