--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -3,14 +3,29 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  width: 528px;
-  height: 581px;
+  width: 100%;
+  height: 609px;
   background-color: $white-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 
   transition: transform 550ms cubic-bezier(0.4, 0, 0.2, 1) 100ms;
+
+  @media screen and (max-width: 341px) {
+    height: 630px;
+  }
+  @media screen and (max-width: 449px) {
+    max-width: 450px;
+  }
+  @media screen and (min-width: 450px) {
+    width: 450px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+    height: 581px;
+  }
 
   .is-hidden & {
     transform: translate(-50%, -50%) scale(0);
